// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`babelPluginIncludeDocs has to match code snapshot 1`] = `
"/**
 * Test mock file
 *
 */

import React from 'react';
import { PropTypes } from "react";
import SecondaryComponent, { secondaryDefaultProps, secondaryPropTypes } from './SecondaryComponent';
import ClassComponent from './ClassComponent';
export const primaryPropTypes = {
  top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
};
export const primaryDefaultProps = {
  space: null,
  top: null,
  right: null,
  bottom: null,
  left: null
};
export default class PrimaryComponent extends React.PureComponent {
  static propTypes = {
    boolean: PropTypes.oneOfType([PropTypes.string, PropTypes.bool]),
    number: PropTypes.oneOfType([PropTypes.string, PropTypes.number]),
    spacing: PropTypes.shape({
      top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
    }),
    top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    classProperty: PropTypes.string,
    secondary_foo: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    secondary_spacing: PropTypes.shape({
      secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
    }),
    children: PropTypes.node
  };
  static defaultProps = {
    boolean: null,
    number: null,
    spacing: null,
    top: null,
    ...primaryDefaultProps,
    ...secondaryDefaultProps,
    classProperty: null,
    children: null
  };
  static Secondary = SecondaryComponent;
  static SecondaryDuplication = SecondaryComponent;
  render() {
    return [this.props.boolean, this.props.number, this.props.spacing, this.props.top, this.props.secondary_foo, this.props.secondary_spacing, this.props.children];
  }
}
const Element = () => {
  return null;
};
Element.propTypes = {
  boolean: PropTypes.oneOfType([PropTypes.string, PropTypes.bool]),
  number: PropTypes.oneOfType([PropTypes.string, PropTypes.number]),
  spacing: PropTypes.shape({
    top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
  }),
  top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary_foo: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary_spacing: PropTypes.shape({
    secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
  }),
  children: PropTypes.node
};
Element.defaultProps = {
  boolean: null,
  number: null,
  spacing: null,
  top: null,
  ...primaryDefaultProps,
  children: null
};"
`;

exports[`babelPluginIncludeDocs has to match code snapshot in strict mode 1`] = `
"/**
 * Test mock file
 *
 */

import React from 'react';
import { PropTypes } from "react";
import SecondaryComponent, { secondaryDefaultProps, secondaryPropTypes } from './SecondaryComponent';
import ClassComponent from './ClassComponent';
export const primaryPropTypes = {
  top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
};
export const primaryDefaultProps = {
  space: null,
  top: null,
  right: null,
  bottom: null,
  left: null
};
export default class PrimaryComponent extends React.PureComponent {
  static propTypes = {
    boolean: PropTypes.bool,
    number: PropTypes.number,
    spacing: PropTypes.shape({
      top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
    }),
    top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    classProperty: PropTypes.string,
    secondary_foo: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    secondary_spacing: PropTypes.shape({
      secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
    }),
    children: PropTypes.node
  };
  static defaultProps = {
    boolean: null,
    number: null,
    spacing: null,
    top: null,
    ...primaryDefaultProps,
    ...secondaryDefaultProps,
    classProperty: null,
    children: null
  };
  static Secondary = SecondaryComponent;
  static SecondaryDuplication = SecondaryComponent;
  render() {
    return [this.props.boolean, this.props.number, this.props.spacing, this.props.top, this.props.secondary_foo, this.props.secondary_spacing, this.props.children];
  }
}
const Element = () => {
  return null;
};
Element.propTypes = {
  boolean: PropTypes.bool,
  number: PropTypes.number,
  spacing: PropTypes.shape({
    top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
  }),
  top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary_foo: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary_spacing: PropTypes.shape({
    secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
  }),
  children: PropTypes.node
};
Element.defaultProps = {
  boolean: null,
  number: null,
  spacing: null,
  top: null,
  ...primaryDefaultProps,
  children: null
};"
`;

exports[`babelPluginIncludeDocs has to match collectProps snapshot given by onComplete 1`] = `
"/**
 * Test mock file
 *
 */

import React from 'react';
import { PropTypes } from "react";
import SecondaryComponent, { secondaryDefaultProps, secondaryPropTypes } from './SecondaryComponent';
import ClassComponent from './ClassComponent';
export const primaryPropTypes = {
  top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
};
export const primaryDefaultProps = {
  space: null,
  top: null,
  right: null,
  bottom: null,
  left: null
};
export default class PrimaryComponent extends React.PureComponent {
  static propTypes = {
    boolean: PropTypes.oneOfType([PropTypes.string, PropTypes.bool]),
    number: PropTypes.oneOfType([PropTypes.string, PropTypes.number]),
    spacing: PropTypes.shape({
      top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
      left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
    }),
    top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    classProperty: PropTypes.string,
    secondary_foo: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    secondary_spacing: PropTypes.shape({
      secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
    }),
    children: PropTypes.node
  };
  static defaultProps = {
    boolean: null,
    number: null,
    spacing: null,
    top: null,
    ...primaryDefaultProps,
    ...secondaryDefaultProps,
    classProperty: null,
    children: null
  };
  static Secondary = SecondaryComponent;
  static SecondaryDuplication = SecondaryComponent;
  render() {
    return [this.props.boolean, this.props.number, this.props.spacing, this.props.top, this.props.secondary_foo, this.props.secondary_spacing, this.props.children];
  }
}
const Element = () => {
  return null;
};
Element.propTypes = {
  boolean: PropTypes.oneOfType([PropTypes.string, PropTypes.bool]),
  number: PropTypes.oneOfType([PropTypes.string, PropTypes.number]),
  spacing: PropTypes.shape({
    top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
    left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
  }),
  top: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  right: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  bottom: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  left: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary_foo: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool]),
  secondary_spacing: PropTypes.shape({
    secondary: PropTypes.oneOfType([PropTypes.string, PropTypes.number, PropTypes.bool])
  }),
  children: PropTypes.node
};
Element.defaultProps = {
  boolean: null,
  number: null,
  spacing: null,
  top: null,
  ...primaryDefaultProps,
  children: null
};"
`;

exports[`babelPluginIncludeDocs has to match collectProps snapshot given by onComplete 2`] = `
[
  "boolean",
  "number",
  "spacing",
  "top",
  "right",
  "bottom",
  "left",
  "secondary",
  "secondary_foo",
  "secondary_spacing",
  "children",
]
`;

exports[`babelPluginIncludeDocs has to match docs snapshot 1`] = `
[
  null,
  null,
]
`;
